--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
 	<version>0.5.0-SNAPSHOT</version>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding
+ 		<sonar.projectKey>kinmat_ivt-lab</sonar.projectKey>
+ 		<sonar.organization>kinmat</sonar.organization>
+ 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
